# FluxTrade

./: .env.example  .gitignore  README.md  README.zh-TW.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  mkdocs.zh-TW.yml
.github/workflows/: ci.yml
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/src/: auth.py  data_provider.py
database/: verify_seed.py
database/alembic/: env.py
database/alembic/versions/: 23dad9ecd748_create_strategy_state_table.py  544073f44fb7_create_backtest_tables.py  7c9e4f2a1b3d_add_order_idempotency_and_audit_split.py  a9c6cd5a3243_initial_schema_and_seed.py  (+4 more)
docs/: README.zh-TW.md  index.md  user_guide.md
docs/api/: interfaces.md  models.md  rust-bindings.md
docs/architecture/: adapter-pattern.md  data-flow.md  overview.md  rust-engine.md
docs/en/: developer_guide.md
docs/getting-started/: first-backtest.md  installation.md  quickstart.md
docs/guide/: backtesting.md  configuration.md  control-plane.md  external-signals.md  live-trading.md  writing-strategies.md
docs/zh-TW/: developer_guide.md  index.md
monitoring/: prometheus.yml
python-strategy/: Dockerfile  README.md  pyproject.toml
python-strategy/src/: main.py
python-strategy/src/control_plane/: __init__.py  app.py  backtest_jobs.py  gene_control.py  jobs.py  main.py  models.py  parameter_search.py  server.py  strategy_control.py  strategy_state_query.py
python-strategy/src/core/: analytics.py  audit_service.py  backtest_runner.py  capital_allocator.py  client_order_id.py  clock.py  command_router.py  consumer.py  daily_nav_snapshot.py  data_provider.py  data_quality.py  db.py  engine.py  exchange_adapter.py  execution.py  health.py  health_monitor.py  interfaces.py  journal.py  jsonb_helpers.py  metrics.py  migration_validators.py  models.py  order_manager.py  orm_models.py  product_registry.py  redis_factory.py  repositories.py  risk_config.py  risk_manager.py  signal_processor.py  simulation.py  strategy_loader.py  strategy_registry.py  strategy_state_manager.py  ws_connector.py
python-strategy/src/core/adapters/: __init__.py  ccxt_adapter.py  live_binance.py  simulated.py
python-strategy/src/core/backtest/: loader.py
python-strategy/src/core/data_sources/: __init__.py  csv_source.py  database.py  memory.py  yahoo.py
python-strategy/src/core/interfaces/: __init__.py  data_source.py  exchange.py  repository.py
python-strategy/src/core/mocks/: account_service.py
python-strategy/src/core/risk_rules/: __init__.py  daily_loss_circuit_breaker.py  max_position_notional.py  order_rate_limit.py  price_sanity_check.py  single_order_notional.py
python-strategy/src/lua/: update_position.lua
python-strategy/src/mocks/: redis_publisher.py
python-strategy/src/strategies/: base.py  callable_strategy.py  csv_signal_strategy.py  example.py  golden_cross.py
python-strategy/tests/: conftest.py  test_adapters_simulated.py  test_analytics.py  test_audit_service.py  test_backtest_report.py  test_backtest_runner.py  test_callable_strategy.py  test_capital_allocator.py  test_ccxt_adapter.py  test_client_order_id.py  test_command_router.py  test_concurrency_session.py  test_consumer.py  test_consumer_reconnect.py  test_control_plane.py  test_csv_signal_strategy.py  test_daily_nav_snapshot.py  test_data_provider.py  test_data_quality.py  test_data_sources.py  test_engine.py  test_engine_integration.py  test_execution.py  test_health.py  test_health_monitor.py  test_integration_models.py  test_invariant_pnl_consistency.py  test_invariant_position_consistency.py  test_invariant_position_sign.py  test_journal.py  test_jsonb_helpers.py  test_main.py  test_metrics.py  test_migration_5_structure.py  test_migration_6_structure.py  test_migration_7_structure.py  test_migration_8_structure.py  test_migration_validators.py  test_migrations.py  test_models.py  (+22 more)
python-strategy/tests/integration/: conftest.py  test_backtest_e2e.py  test_backtest_replay_current_pipeline.py  test_external_signal.py  test_fault_injection.py  test_multi_strategy.py  test_multi_strategy_backtest.py  test_rust_binding.py  test_signal_to_fill.py  test_stress.py
rust-data-service/: Cargo.toml  Dockerfile
rust-data-service/src/: lib.rs  main.rs  watchdog.rs
rust-data-service/src/aggregator/: mod.rs
rust-data-service/src/binding/: matcher.rs  mod.rs  models.rs
rust-data-service/src/connector/: backpack.rs  binance.rs  bybit.rs  mod.rs  ws.rs
rust-data-service/src/historical/: mod.rs
rust-data-service/src/model/: mod.rs
rust-data-service/src/publisher/: mod.rs
tools/: benchmark.py  benchmark_breakdown.py  benchmark_matching_engine.py  bump_version.sh  fetch_real_data.py  generate_structured_data.py  run_backtest_suite.py  seed_db.py  smoke_test_hotplug.py
(+19 files in other folders)
