[project]
name = "python-strategy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.34",
    "hiredis>=3.3.0",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
markers = [
    "smoke: critical path tests for quick validation (select with '-m smoke')",
    "integration: tests requiring external services (Docker, Redis, Postgres)",
]
