[package]
name = "rust-data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3.31"
redis = { version = "0.24", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "rustls"] }
rust_decimal = { version = "1.35", features = ["serde-float"] }
rust_decimal_macros = "1.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "rust_decimal"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
