[package]
name = "rust-data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
redis = { version = "0.24", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "rustls"] }
rust_decimal = { version = "1.35", features = ["serde-str"] }
rust_decimal_macros = "1.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "rust_decimal"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
clap = { version = "4.5.54", features = ["derive"] }
zip = "0.6.6"
csv = "1.4.0"
